fixed alignment for intro, removed outdated code

--- a/desktop.css
+++ b/desktop.css
@@ -1,13 +1,7 @@
 @media screen and (min-width: 720px) {
     .pharmacist {
-        display: block
-    }
-    .info {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-    }
-    .info > :not(:first-child) {
-        margin-top: 0;
+        display: block;
+        width: 60%;
     }
     body {
         color: black;
@@ -20,9 +14,6 @@
         margin-left: auto;
         margin-right: auto;
         width: 65%;
-    }
-    .pharmacist {
-        display: none;
     }
     .tagline {
         color: #1A237E;
@@ -58,5 +49,22 @@
     .label {
         font-size: 16px;
         font-weight: bold;
+    }
+    .info {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+    .info > :not(:first-child) {
+        margin-top: 0;
+    }
+    .intro {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+    .intro > :not(:first-child) {
+        margin-top: 0;
+    }
+    .services {
+        text-align: justify;
     }
 }
